# from-singleton

./: Cargo.toml  README.md
src/: find.rs  lib.rs
