[package]
name = "from-singleton"
version = "3.0.0"
edition = "2024"
authors = ["Dasaav"]
description = "FromSoftware singleton manipulation library"
readme = "README.md"
repository = "https://github.com/Dasaav-dsv/from-singleton"
license = "MIT OR Apache-2.0"

[dependencies]
fxhash = "0.2"
memchr = "2.7"
smallvec = { version = "1.15", features = ["union", "const_generics"] }

[dependencies.pelite]
version = "0.10"
default-features = false
features = [
    "std",
]

[dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_System_LibraryLoader"
]
